--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitch-Margoliash Algorithm Simulator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/main.css">
     <style>
        
         .content-wrapper { display: flex; gap: 20px; margin-top: 20px; }
