--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" width="130" height="60" style="vertical-align:middle;margin:8px">
+        <img src="images\logo.png" width="130" height="60" style="vertical-align:middle;margin:8px">
         <div class='at-item'>Phylogenetic Tree Reconstruction Using Fitch-Margoliash Algorithm</div><br>
         <div class="content_align">
             <label>Upload the file:</label>
