--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -313,7 +313,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="logo.png" alt="Logo" width="130" height="60">
+            <img src="images\logo.png" alt="Logo" width="130" height="60">
             <div class="at-item">Phylogenetic Tree Reconstruction Using Fitch-Margoliash Algorithm</div>
         </div>
 
@@ -338,13 +338,13 @@
                 <div class="step">Step 3: Create a new internal node that represents the common ancestor of the closest taxa.<br>
                     <span style='font-size:20px;'>&#9642;</span>Assign branch lengths to the new node using the weighted least-squares method.<br>
                     <span style='font-size:20px;'>&#9642;</span>The branch length from taxa to the new node is computed as:
-                    <img src="eq1.png" alt="eq1" width="300" height="80">
+                    <img src="images\eq1.png" alt="eq1" width="300" height="80">
                     Where 𝑋 is the new node, and 𝑛 is the total number of taxa.
 
                 </div>
                 <div class="step">Step 4: Update the Distance Matrix
                 <span style='font-size:20px;'>&#9642;</span>Compute distances from X to all other taxa using the formula:<br>
-                <img src="eq2.png" alt="eq2" width="300" height="80"></div>
+                <img src="images\eq2.png" alt="eq2" width="300" height="80"></div>
             
                 <div class="step">Step 5: Repeat Steps 2-4 Until Only One Node Remains</div>
                 <div class="step"> Step 6: Construct the Phylogenetic Tree</div>
