--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -356,7 +356,7 @@
                 <b>Upload File:</b><input type="file" id="fileInput" accept=".txt,.fa,.fasta">
                 
                     <a href="ms1.txt" download style="color: #44a7f8;"><small>Sample Text File</small></a>&nbsp;&nbsp;
-                    <a href="sample.txt" download style="color: #44a7f8;"><small>Sample FASTA</small></a><br><br>
+                    <a href="sample.fa" download style="color: #44a7f8;"><small>Sample FASTA</small></a><br><br>
                 
                 <button onclick="processFile()">Run Algorithm</button>
                 <button onclick="location.reload()">Reset</button>
